# zCloak-keeper

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  config.json  rustfmt.toml
.config/: task-moonbeam.toml  task-zcloak-substrate.toml
.github/workflows/: github-actions.yml
components/client-zcloak-subxt/: Cargo.toml
components/http-client/: Cargo.toml
components/http-client/src/: lib.rs
components/ipfs/: Cargo.toml
components/ipfs/src/: client.rs  config.rs  error.rs  lib.rs
components/subxt-client/: Cargo.toml
components/subxt-client/src/: error.rs  lib.rs
components/subxt-client/src/rpc/: mod.rs
ipfs/: Cargo.toml
ipfs/src/: error.rs  funcs.rs  lib.rs  metrics.rs  task.rs  types.rs
keys/: d7a758a7-9023-4b3e-a603-0adbb571e4c3
kilt/: Cargo.toml
kilt/src/: error.rs  funcs.rs  lib.rs  metrics.rs  task.rs  types.rs  utils.rs
moonbeam/: Cargo.toml
moonbeam/src/: error.rs  funcs.rs  lib.rs  metrics.rs  task.rs  types.rs  utils.rs
primitives/: Cargo.toml
primitives/contracts/: ProofStorage.json  SimpleAggregator.json  TestDynamicEvent.json
primitives/res/: config-example.json  config.json  monitor_template
primitives/src/: config.rs  error.rs  ipfs.rs  keeper.rs  kilt.rs  lib.rs  monitor.rs  moonbeam.rs  traits.rs  types.rs  verify.rs
primitives/src/frame/: mod.rs  sudo.rs  verify.rs
primitives/src/monitor/: metrics.rs  mod.rs  notify_bot.rs  promeths.rs
primitives/src/utils/: array.rs  byte.rs  crypto.rs  error.rs  mod.rs  utils.rs
primitives/src/utils/ipfs/: client.rs  config.rs
prometheus/: Cargo.toml
prometheus/src/: lib.rs
supports/support-kilt-node/: Cargo.toml  kilt.scale  kilt_metadata.scale  metadata.scale  tmp.scale
supports/support-kilt-node/src/: account.rs  client.rs  kilt.rs  lib.rs  pallets.rs  runtime.rs  tests.rs
supports/support-zcloak-node/: Cargo.toml
supports/support-zcloak-node/src/: account.rs  client.rs  lib.rs  runtime.rs
task/task-management/: Cargo.toml
task/task-management/src/: config.rs  keep.rs  lib.rs  resource.rs  state.rs  task.rs
task/task-moonbeam/: Cargo.toml
task/task-moonbeam/contracts/: KiltProofs.json
task/task-moonbeam/docs/: Usage.md
task/task-moonbeam/proofs/: .proof
task/task-moonbeam/src/: bus.rs  config.rs  error.rs  event.rs  lib.rs  message.rs  route.rs  task.rs
task/task-moonbeam/src/service/: MyToken.json  ZeroKnowlegeProof.json  mod.rs  moonbeam.rs  query_attestation.rs  query_proof.rs  service.rs
task/task-moonbeam/src/service/moonbeam/: mod.rs  run.rs  tests.rs
task/task-zcloak-substrate/: Cargo.toml
task/task-zcloak-substrate/docs/: Usage.md
task/task-zcloak-substrate/src/: bus.rs  config.rs  lib.rs  message.rs  route.rs  task.rs
task/task-zcloak-substrate/src/service/: service.rs
traits/: Cargo.toml
traits/src/: error.rs
traits/src/server/: chain.rs  component.rs  config.rs  mod.rs  service.rs  task.rs  types.rs
