[package]
name = "component-ipfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
reqwest = "0.11"
url = "2.2"
thiserror = "1.0"
prometheus-endpoint = { path = "../prometheus"}

# self
keeper-primitives = { path = "../primitives" }
