[package]
name = "component-kilt"
version = "0.1.0"
edition = "2021"
authors = ["zCloak Network"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
  "derive",
  "full",
] }
bincode = { version = "1.3.1", optional = true }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
jsonrpsee = { version = "0.6.1", features = [
  "macros",
  "http-client",
  "ws-client",
] }

# self
keeper-primitives = { path = "../primitives" }
