[package]
name = "component-moonbeam"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
  "derive",
  "full",
] }
bincode = { version = "1.3.1", optional = true }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
web3 = "0.18.0"
secp256k1 = { version = "0.21", features = ["recovery"] }
rand = "0.8.5"

# self
keeper-primitives = { path = "../primitives" }

[features]
monitor = []
