[package]
name = "primitives"
version = "0.1.0"
authors = ["zCloak Network"]
description = "zCloak verify server"
repository = "https://github.com/zCloak-Network/zCloak-server.git"
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "LICENSE"
]
readme = 'README.md'
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
async-trait = "0.1"
array-bytes = "1.1"
rlp = "0.5.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }

rust-crypto = "0.2"
base64 = "0.13"
uint = "0.9.1"

jsonrpsee-types = "0.4.1"
jsonrpsee-ws-client = { version = "0.4.1", default-features = false }
jsonrpsee-http-client = { version = "0.4.1", default-features = false }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
secp256k1 = { version = "0.20", features = ["recovery"] }

server-traits = { path = "../traits" }
hex = { version = "0.4",optional = true}
bincode = { version = "1.3.1", optional = true }
# TODO: change this to remote repo, branch = "lib"
starksVM = { git = "https://github.com/dejavukong/distaff", branch = "lib" }
component-ipfs = { path = "../components/ipfs" }

[features]
default = ["std"]
std = [
    "bincode",
    "hex"
]

