[package]
name = "keeper-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-error = "*"
jsonrpsee = { version = "0.6.1", features = [
  "macros",
  "http-client",
  "ws-client",
] }
tokio = { version = "1", features = ["full"] }
web3 = "0.18.0"
secp256k1 = { version = "0.21", features = ["recovery"] }
reqwest = "0.11"
url = "2.2"
bincode = "1.3"
yaque = "0.6.3"
futures-timer = "*"
strfmt = "*"
# starks vm
starksVM = { git = "https://github.com/dejavukong/distaff.git", branch = "lib" }

# substrate / kilt
codec = { package = "parity-scale-codec", version = "2.0.0", features = [
  "derive",
  "full",
] }
sp-core = "4.0.0-dev"
sp-runtime = "4.0.0-dev"
frame-metadata = "14.2.0"
public-ip = "0.2"

# monitor
prometheus-endpoint = { path = "../prometheus" }
hyper = { version = "0.14.16", features = ["full"] }


[features]
monitor = []
