[package]
name = "verify-traits"
version = "0.1.0"
authors = ["zCloak Network"]
description = "zCloak verify server"
repository = "https://github.com/zCloak-Network/zCloak-server.git"
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "LICENSE"
]
keywords = ["substrate"]
readme = 'README.md'
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
async-trait = "0.1"
once_cell = "1"
futures = "0.3"

strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"

config = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
serde_yaml = "0.8"

lifeline = { git = "https://github.com/fewensa/lifeline-rs.git", branch = "threads-safely" }
