[package]
name = "http-client"
version = "0.1.0"
authors = ["zCloak Network"]
description = "zCloak verify server"
repository = "https://github.com/zCloak-Network/zCloak-server.git"
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "LICENSE"
]
readme = 'README.md'
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }

reqwest = { version = "0.11", features = ["json"] }
server-traits = { path = "../../traits" }