[package]
name = "subxt-client"
version = "0.1.0"
authors = ["zCloak Network"]
description = "zCloak verify server"
repository = "https://github.com/zCloak-Network/zCloak-server.git"
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "LICENSE"
]
keywords = ["substrate"]
readme = 'README.md'
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
async-trait = "0.1"
array-bytes = "1.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonrpsee-types = "=0.2.0-alpha.6"
jsonrpsee-ws-client = "=0.2.0-alpha.6"
jsonrpsee-http-client = "=0.2.0-alpha.6"

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }
web3 = { version = "0.16.0", git = "https://github.com/wuminzhe/rust-web3.git", branch = "master", features = ["signing"] }
secp256k1 = { version = "0.20", features = ["recovery"] }

substrate-subxt = { git = "https://github.com/darwinia-network/substrate-subxt.git", tag = "darwinia-v0.15.2" }
substrate-subxt-proc-macro = { git = "https://github.com/darwinia-network/substrate-subxt.git", tag = "darwinia-v0.15.2" }
