[package]
name = "components-subxt-client"
version = "0.1.0"
authors = ["zCloak Network"]
description = "zCloak verify server"
repository = "https://github.com/zCloak-Network/zCloak-server.git"
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "LICENSE"
]
keywords = ["substrate"]
readme = 'README.md'
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
async-trait = "0.1"
array-bytes = "1.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonrpsee-types = "0.4.1"
jsonrpsee-ws-client = { version = "0.4.1", default-features = false }
jsonrpsee-http-client = { version = "0.4.1", default-features = false }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }
secp256k1 = { version = "0.20", features = ["recovery"] }

subxt = { git = "https://github.com/byteflyfunny/substrate-subxt.git", branch = "jay_subxt" }
subxt-macro = { git = "https://github.com/byteflyfunny/substrate-subxt.git", branch = "jay_subxt" }

