[package]
name = "support-kilt-node"
version = "0.1.0"
authors = ["zCloak Network"]
description = "zCloak verify server"
repository = "https://github.com/zCloak-Network/zCloak-server.git"
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "LICENSE"
]
readme = 'README.md'
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
async-trait = "0.1"
thiserror = "1.0"
jsonrpsee = { version = "0.6.1", features = ["macros", "http-client", "ws-client"] }
serde_json = "1.0.68"
sp-core = "4.0.0-dev"
sp-runtime = "4.0.0-dev"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
frame-metadata = "14.2.0"
primitives = { package = "primitives", path = "../../primitives"}
server-traits = { path = "../../traits"}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
primitive-types = { version = "0.10", features = ["scale-info"] }


[dev-dependencies]
tokio = "1.15.0"
hex = "0.4"