[package]
name = "support-zcloak-node"
version = "0.1.0"
authors = ["zCloak Network"]
description = "zCloak verify server"
repository = "https://github.com/zCloak-Network/zCloak-server.git"
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "LICENSE"
]
keywords = ["substrate"]
readme = 'README.md'
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }
log = "0.4.14"
env_logger = "0.9.0"
jsonrpsee-types = "=0.2.0-alpha.6"
jsonrpsee-ws-client = "=0.2.0-alpha.6"
jsonrpsee-http-client = "=0.2.0-alpha.6"
bincode = { version = "1.3.1", optional = true }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"


substrate-subxt = { git = "https://github.com/darwinia-network/substrate-subxt.git", tag = "darwinia-v0.15.2" }
substrate-subxt-proc-macro = { git = "https://github.com/darwinia-network/substrate-subxt.git", tag = "darwinia-v0.15.2" }

subxt-client = { package = "components-subxt-client", path = "../../components/subxt-client"}
primitives = { package = "primitives", path = "../../primitives"}
server-traits = { path = "../../traits"}

starksVM = { git = "https://github.com/LIUJUNYAN/starks-verifier.git", default-features = false}
hex = { version = "0.4", optional = true }
sp-keyring = "3.0.0"

[features]
default = ["std"]
std = [
    "bincode",
    "hex",
    ]