[package]
name = "task-moonbeam"
version = "0.1.0"
authors = ["zCloak Network"]
description = "the task server for subscrible moonbeam"
repository = "https://github.com/zCloak-Network/zCloak-server.git"
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "LICENSE"
]
keywords = ["substrate"]
readme = 'README.md'
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

lifeline = { git = "https://github.com/fewensa/lifeline-rs.git", branch = "threads-safely" }
microkv = { git = "https://github.com/ex0dus-0x/microkv.git", branch = "master" }

postage = "0.4.1"

tokio = { version = "1", features = ["full"] }


server-traits = { path = "../../traits"}
task-management = { path = "../../task/task-management"}
primitives = { path = "../../primitives" }
components-subxt-client = { path = "../../components/subxt-client" }
hex-literal = "0.3"
env_logger = "0.9.0"

async-recursion = "0.3.2"
web3 = { version = "0.16.0", git = "https://github.com/wuminzhe/rust-web3.git", branch = "master", features = ["signing"] }
array-bytes = "1.1.0"
secp256k1 = { version = "0.20", features = ["recovery"]}
